k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      imagePullSecrets:            # ← imagePullSecrets goes HERE
        - name: ecr-secret
      containers:
        - name: api-gateway
          image: 635668539225.dkr.ecr.ap-south-1.amazonaws.com/api-gateway:4178fb73ec695c0bf7af570eb9ab2d1b582980da
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - port: 3000
      targetPort: 3000
