k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:            # ← imagePullSecrets goes HERE
        - name: ecr-secret
      containers:
        - name: frontend
          image: 635668539225.dkr.ecr.ap-south-1.amazonaws.com/frontend:5fd35a7fb24b1a82a140be2ded68eb8d83dcfff5
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
