k8s/ingestion-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ingestion-service
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: ingestion-service
  template:
    metadata:
      labels:
        app: ingestion-service
    spec:
      imagePullSecrets:            # ← imagePullSecrets goes HERE
        - name: ecr-secret
      containers:
        - name: ingestion-service
          image: 635668539225.dkr.ecr.ap-south-1.amazonaws.com/ingestion-service:8013c3d79473bcd57d4d03b083e7f642e68125cd
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
spec: 
  selector: 
    app: ingestion-service
  ports:
    - port: 8002
      targetPort: 8002
