k8s/orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator
  template:
    metadata: 
      labels:
        app: orchestrator
    spec:
      imagePullSecrets:            # ← imagePullSecrets goes HERE
        - name: ecr-secret
      containers:
        - name: orchestrator
          image: 635668539225.dkr.ecr.ap-south-1.amazonaws.com/orchestrator:e121ecb3d8678adbce36df50609b0762e0c9b1ae
          ports:
            - containerPort: 8003
---

apiVersion: v1
kind: Service
metadata:
  name: orchestrator
spec:
  selector: 
    app: orchestrator
  ports:
    - port: 8003
      targetPort: 8003
